--- a/package.json
+++ b/package.json
@@ -8,8 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "amfe-flexible": "^2.2.1",
     "core-js": "^3.8.3",
+    "cropperjs": "^1.5.13",
+    "dayjs": "^1.11.7",
+    "lodash": "^4.17.21",
+    "vant": "^2.12.54",
     "vue": "^2.6.14",
+    "vue-cropper": "^0.5.11",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2"
   },
@@ -22,7 +28,8 @@
     "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "@vue/eslint-config-standard": "^6.1.0",
-    "eslint": "^7.32.0",
+    "axios": "^0.18.0",
+    "eslint": "^8.38.0",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.0",
@@ -30,7 +37,13 @@
     "less": "^4.0.0",
     "less-loader": "^8.0.0",
     "lint-staged": "^11.1.2",
+    "postcss-pxtorem": "^6.0.0",
+    "vue-cli-plugin-axios": "~0.0.4",
     "vue-template-compiler": "^2.6.14"
+  },
+  "parserOptions": {
+    "parser": "@babel/eslint-parser",
+    "requireConfigFile": false
   },
   "gitHooks": {
     "pre-commit": "lint-staged"
